--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,9 +8,9 @@ repos:
         language: system
         types: [python]
         exclude: ^docs/|^tests/
-  
+
   - repo: local
-    hooks: 
+    hooks:
       - id: black
         name: black
         entry: poetry run black
@@ -21,7 +21,7 @@ repos:
     hooks:
       - id: isort
         name: isort
-        entry: poetry run isort
+        entry: poetry run isort .
         language: system
         types: [python]
 
@@ -35,10 +35,21 @@ repos:
 
   - repo: local
     hooks:
+      - id: pydocstyle
+        name: pydocstyle
+        entry: poetry run pydocstyle
+        language: system
+        types: [python]
+
+  - repo: local
+    hooks:
       - id: flake8
         name: flake8
         entry: poetry run flake8
-        types: [python]
+        language: system
+        types:
+          [python]
+          # Adapt max line length based on black formatting
         args:
           - "--max-line-length=88"
 
